--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class="logo">AUTODOPS</div>
       <nav class="nav-links">
         <a href="home.html" class="active">Home</a>
-        <a href="shop.html">Shop</a>
+        <a href="Shop.html">Shop</a>
       </nav>
     </header>
 
@@ -308,7 +308,7 @@
         <p class="hero-meta">Start exploring</p>
 
         <div class="hero-actions">
-          <a href="shop.html" class="btn-primary">
+          <a href="Shop.html" class="btn-primary">
             Go to Shop
             <span>↗</span>
           </a>
